--- a/resources/css/scss/base/_animations.scss
+++ b/resources/css/scss/base/_animations.scss
@@ -59,3 +59,15 @@
        
     }
 }
+
+@keyframes slideInFromTop {
+    0% {
+      transform: translateY(-100%);
+      opacity: 0;
+    }
+    100% {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
+  
