--- a/resources/css/scss/base/_typography.scss
+++ b/resources/css/scss/base/_typography.scss
@@ -11,7 +11,7 @@ body{
     font-family: $body-font-family;
     font-size: $body-font-size;
     color: $color-grey;
-    // font-weight: 300;
+    font-weight: 300;
     overflow-x: hidden;
 }
 
@@ -37,17 +37,17 @@ h4, h5, h6{
 }
 
 h1{
-    font-size: 47px;
+    font-size: 84px;
     line-height: 1;
 }
 h2{
-    font-size: 35px;
+    font-size: 50px;
 }
 h3{
-    font-size:24px;
+    font-size:31px;
 }
 h4{
-    font-size:18px;
+    font-size:25px;
 }
 h5{
     font-size:16px;
