--- a/resources/css/scss/base/_variables.scss
+++ b/resources/css/scss/base/_variables.scss
@@ -4,32 +4,32 @@
 // lighten($color-black, 20%); #333
 
 
-$color-primary: #ff0000;
-$color-secondary: #00c2d5;
+$color-primary: #004EBF;
+$color-secondary: #EEF5FF;
 $color-success: #86c837;
 $color-alert: #ff002b;
 $color-warning: #fbb200;
 
 $color-black: #000;
 $color-white: #fff;
-$color-grey: #363636; 
-$color-dark: #161e28; //1a1818
+$color-grey: #4B4B4B; 
+$color-dark: #262626; //1a1818
 $color-light: #eff2f5;
 
 $color-lblue: #00c2d5;
 $color-dblue: #00c2d5;
 
-$body-font-family: 'Roboto', sans-serif;
-$body-font-size: 16px;
+$body-font-family: 'halyard-display', sans-serif;
+$body-font-size: 22px;
 
-$heading-font-family: 'Roboto', serif; 
+$heading-font-family: 'halyard-display', serif; 
 $button-font-family: $body-font-family;
 
 $font-family-oswald: 'Oswald', sans-serif;
 
 
 // FOUNDATION VARIABLES 
-$grid-container: 1470px;
+$grid-container: 1410px;
 $grid-container-padding: 60px;
 
 $foundation-palette: (
