--- a/resources/css/scss/sections/_footer.scss
+++ b/resources/css/scss/sections/_footer.scss
@@ -1,8 +1,10 @@
 
 // Select Footer Style
 .footer {
-    background: $color-dblue;
-    font-size: 14px;
+    background: $color-dark;
+    font-size: 18px;
+    font-weight: 300;
+    padding: 160px 0 60px;
 
     * {
         color: $color-white;
@@ -15,15 +17,72 @@
     }
 
     h4 {
-        font-size: 16px;
+        color: $color-primary;
         font-family: $heading-font-family;
-        border-bottom:1px solid lighten($color-black, 33.8%);
         padding: 8px 0;
-        margin: 0 0 8px;
+        margin: 0;
     }
 
     .foottop {
         padding: 60px 0;
+
+        .logo figure{
+            margin-bottom: 50px;
+        }
+
+        .button {
+            width: 100%;
+            margin: 0;
+        }
+
+        .information,
+        .footer_menu {
+            
+            justify-content: space-around;
+            display: flex;
+        }
+
+        .information {
+            justify-content: flex-end;
+            
+            .call_us, .find_us, .email_us, .follow_us {
+                margin-bottom: 70px;
+            }
+
+            .information_1 {
+                margin-right: 60px;
+            }
+        }
+
+        .footer_menu {
+        
+            .services_menu {
+                margin: 0;
+
+                li {
+                    list-style: none;
+                    
+                    a{
+                        color: #EEF5FF;
+                        font-size: 15px;
+                        font-weight: 300;
+                        letter-spacing: 0.05em;
+                    }
+                }
+            }
+            
+           .menu {
+
+                li {
+                    list-style: none;
+                    
+                    a{
+                        font-size: 15px;
+                        font-weight: 700;
+                    }
+                }
+            }
+        }
     }
 
     .foot_logo {
@@ -72,10 +131,15 @@
 
     .footbot {
         padding: 20px 0;
-        border-top:1px solid lighten($color-black, 33.8%);
-    }
-    .follow_us {
+        font-size: 15px;
+        color: #949494;
         display: flex;
+        justify-content: space-between;
+    }
+    .social_icons {
+        display: flex;
+        gap: 1em;
+        
         h5 {
             font-size: 16px;
             text-transform: uppercase;
