--- a/resources/css/scss/base/_variables.scss
+++ b/resources/css/scss/base/_variables.scss
@@ -16,8 +16,8 @@ $color-grey: #4B4B4B;
 $color-dark: #262626; //1a1818
 $color-light: #eff2f5;
 
-$color-lblue: #00c2d5;
-$color-dblue: #00c2d5;
+$color-lblue: #29BCFC;
+$color-dblue: #3889FF;;
 
 $body-font-family: 'halyard-display', sans-serif;
 $body-font-size: 22px;
