--- a/resources/css/scss/base/_animations.scss
+++ b/resources/css/scss/base/_animations.scss
@@ -71,3 +71,22 @@
     }
   }
   
+  
+@keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
+  @-webkit-keyframes blinking {
+    0%   { opacity: 1; }
+    100% { opacity: 0; }
+  }
+  
+  @keyframes blinking {
+    0%   { opacity: 1; }
+    100% { opacity: 0; }
+  }
