--- a/resources/css/scss/base/_utilities.scss
+++ b/resources/css/scss/base/_utilities.scss
@@ -110,6 +110,7 @@
 		cursor: pointer;
 		opacity: 0.3;
 		border:0 !important;
+		padding: 44px;
 
 		position: absolute;
 		top:50%;
@@ -124,11 +125,11 @@
 	}
 	.slick-prev {
 		left:10px;
-		background: url(../img/icn-chev-left.svg) no-repeat center;
+		background: url(../img/icon/icn-chev-left-b.svg) no-repeat center;
 	}
 	.slick-next {
 		right: 10px;
-		background: url(../img/icn-chev-right.svg) no-repeat center;
+		background: url(../img/icon/icn-chev-right-b.svg) no-repeat center;
 	}
 }
 
