--- a/resources/css/scss/main.scss
+++ b/resources/css/scss/main.scss
@@ -77,6 +77,7 @@
 // PAGES
 @import "./pages/home";
 @import "./pages/inner";
+@import "./pages/contact";
 
 // SECTIONS
 @import "./sections/header";
